# india-itr-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements.txt
env/: __init__.py  case_generator.py  environment.py  models.py  reward.py  tax_engine.py
graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
server/: __init__.py  app.py  india_itr_environment.py  itr_environment.py
tasks/: __init__.py
tests/: test_env.py  test_graders.py  test_tax_engine.py
